Cleanups
Signed-off-by: Scott Stults <sstults@opensourceconnections.com>